# NBT-Lupe

./: .gitmodules  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml
flatpak/: NBT Lupe.desktop  de.chaoscaot.nbt.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: ContextMenu.svelte  HexViewer.svelte  NBTByteArray.svelte  NBTCompoundTag.svelte  NBTList.svelte  NBTTag.svelte  NBTValue.svelte  TypeIcon.svelte
src/stores/: nbt.ts
