[package]
name = "nbt-lupe"
version = "0.0.2"
description = "Basic NBT Editor"
authors = ["Chaoscaot"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "cli", "window-set-title", "clipboard-all", "dialog-confirm", "dialog-open", "dialog-save", "dialog-message", "dialog-ask", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quartz_nbt = { version = "0.2.8", features = ["serde"], path = "../quartz_nbt" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
